--- a/DungeonsAndDoodles/DungeonsAndDoodles.csproj
+++ b/DungeonsAndDoodles/DungeonsAndDoodles.csproj
@@ -55,12 +55,6 @@
     <Compile Include="Form\EditTokenForm.designer.cs">
       <DependentUpon>EditTokenForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\HoverForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form\HoverForm.designer.cs">
-      <DependentUpon>HoverForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,17 +84,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Form\TestTokenListItemForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\TestTokenListItemForm.Designer.cs">
+      <DependentUpon>TestTokenListItemForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form\EditTokenForm.resx">
       <DependentUpon>EditTokenForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form\HoverForm.resx">
-      <DependentUpon>HoverForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\MapControl.resx">
       <DependentUpon>MapControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\TestTokenListItemForm.resx">
+      <DependentUpon>TestTokenListItemForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\TokenListItemControl.resx">
       <DependentUpon>TokenListItemControl.cs</DependentUpon>
