LOOK AT ALL THE PRETTY PICTURES

--- a/DungeonsAndDoodles/DungeonsAndDoodles.csproj
+++ b/DungeonsAndDoodles/DungeonsAndDoodles.csproj
@@ -147,25 +147,72 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resource\Tokens\blue player.png">
+    <None Include="Resource\Tokens\Players\green player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resource\Tokens\green player.png">
+    <None Include="Resource\Tokens\Players\no background player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resource\Tokens\no background player.png">
+    <None Include="Resource\Tokens\Players\orange player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resource\Tokens\orange player.png">
+    <None Include="Resource\Tokens\Players\purple player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resource\Tokens\purple player.png">
+    <None Include="Resource\Tokens\Players\red player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resource\Tokens\red player.png">
+    <None Include="Resource\Tokens\Players\yellow player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resource\Tokens\yellow player.png">
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resource\Tokens\NPC\Blue NPC.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\NPC\Green NPC.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\NPC\Orange NPC.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\NPC\Purple NPC.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\NPC\Red NPC.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\NPC\Transparency NPC.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\NPC\Yellow NPC.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\Players\blue player.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resource\Tokens\Baddies\green baddy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\Baddies\orange baddy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\Baddies\purple baddy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\Baddies\red baddy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\Baddies\teal baddy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\Baddies\transparency baddy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resource\Tokens\Baddies\yellow baddy.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
